--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -933,7 +933,9 @@ i {
   background-color: rgba(90, 99, 121, 0.668)
 }
 
-
+.bottom-menu{
+  display: none;
+}
 @media (max-width: 1350px) {
   .banner {
     height: 80vh;
@@ -1596,4 +1598,91 @@ i {
   .about-text.eng p {
     font-size: 14px;
   }
+}
+@media (max-width: 390px) {
+  .bottom-menu{
+    display: block;
+    background-color: #e2c068;
+    display: table;
+    table-layout: fixed;
+    left: 0;
+    right: 0;
+    top: 60px;
+    width: 100%;
+    height: 51px;
+    vertical-align: middle;
+    -webkit-box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.12);
+    -moz-box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.12);
+    box-shadow: 0px 0px 1px 1px rgba(0,0,0,0.12);
+    -webkit-transition: -webkit-box-shadow .35s ease;
+    -moz-transition: -moz-box-shadow .35s ease;
+    transition: box-shadow .35s ease;
+    transform: translate3d(0px,0px,0px);
+    -webkit-transform: translate3d(0px,0px,0px);
+    background: #e2c068 !important;
+color: #fff !important;
+opacity: 1 !important;
+  }
+  .bottom-menu-button  {
+    background: #e2c068 !important;
+    color: #fff !important;
+    opacity: 1 !important;
+ 
+    text-decoration: none;
+    border-left: 1px solid #D7D7D7;
+    padding: 7px 30px;
+    border-radius: 3px;
+    transition: 0.4s;
+    display: inline-block;
+    /* Add this line */
+    margin-right: 10px;
+    /* Add this line to create space between button and text */
+    font-size: 16px;
+    position: relative;
+    min-width: 50px;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    text-decoration: none !important;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    color: #D7D7D7;
+    background-color: #fff;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+    position: relative;
+    min-width: 50px;
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    display: table-cell;
+    text-decoration: none !important;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    transition: all .3s ease;
+    color: #D7D7D7;
+    background-color: #fff;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+  }
+  .bottom-menu-button  i{
+    color: #fff;
+    
+  }
+  .touchy-call-button::before {
+    content: '';
+    color: #fff;
+    margin-left: -2px;
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    font-size: 20px;
+}
+.fa{
+  font-size: 24px;
+}
 }
