--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -284,6 +284,7 @@ footer {
 }
 
 @media (max-width: 543px) {
+  /*
   footer {
     background-color: #000000;
     color: #fff;
@@ -291,23 +292,166 @@ footer {
     padding: 20px ;
     bottom: 0;
     width: 100%;
-    /* direction: rtl; */
+  
     height: auto;
     height: auto;
   }
   .footer-grid {
-    padding-right: 15%; 
-    padding-left: 15%; 
+   
 
     display: flex;
-    flex-direction: column; /* Arrange items in a column layout */
-    align-items: start; /* Center items horizontally */
-    gap: 20px; /* Add gap between items */
+    flex-direction: column;
+    align-items: center; 
+    gap: 20px; 
     max-width: 100%;
     justify-content: center;
     justify-items: center;
-  }
+   }
   #services-footer{
     display: none;
   }
+  .footer-item {
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    justify-content: center;
+    vertical-align: baseline;
+    align-items: center;
+    width: 300px;
+}
+.menu {
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+.footer-item-content {
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+}
+
+.footer-item-content a{
+  text-align: center;
+  justify-content: baseline;
+  justify-items: center;
+  font-size: 18px;
+}
+.footer-item-title {
+  display: flex;
+  align-items: center;
+  text-align: center !important;
+  justify-content: center;
+  justify-items: center;
+  width: 100%;
+}
+.footer-item-title a{
+  font-size: 22px;
+  text-align: center;
+  text-align: center !important;
+
+}
+
+.footer-grid-m {
+text-align: center !important;
+color: #ffffff;
+align-items: center;
+display: flex;
+flex-direction: column;
+}
+.footer-item-m {
+  text-align: start !important;
+  align-items: start;
+  max-width: fit-content;
+  padding-bottom: 30px;
+}
+.footer-item-title-m a {
+  text-align: start !important;
+  color: #fff;
+ 
+}
+.footer-item-content-m{
+  color: #fff;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+}
+.menu-m {
+  text-align: start;
+  color: #fff;
+  vertical-align: baseline;
+  max-width: fit-content;
+  list-style: none;
+  padding: 0;
+}
+.menu-m a{
+  text-align: start;
+  color: #fff;
+  vertical-align: baseline;
+  max-width: fit-content;
+  list-style: none;
+  padding: 0;
+} */
+
+
+.footer-grid {
+ 
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  gap: 20px; /* Add gap between items */
+  max-width: 100%;
+  justify-content: center;
+  justify-items: center;
+}
+#services-footer{
+  display: none;
+}
+.footer-item{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+
+}
+.footer-item-content{
+  display: flex;
+  text-align: center;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
+}
+.footer-item-content p{ 
+  font-size: 18px;
+}
+.footer-item-content a{ 
+  font-size: 18px;
+}
+.footer-item-title a{ 
+  font-size: 24px;
+}
+.footer-item-content .menu {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+  align-items: center;
+
+}
+.footer-item-content .menu p{
+  text-align: start;
+  align-items: start;
+  min-width: 100%;
+  padding-left: 20px;
+  padding-right: 50px;
+ 
+}
+footer .menu p i{
+
+  padding-left: 20px;
+  padding-right: 50px;
+}
 }
