--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a  href="https://rt-cranes.onrender.com" title="SRC | ש.ר מנופים ">
+      <a  href="https://www.google.co.il" title="SRC | ש.ר מנופים ">
         <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
       /></a>
     </div>
