--- a/public/css/homePage.css
+++ b/public/css/homePage.css
@@ -1394,8 +1394,8 @@ i {
   .clients-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
-    row-gap: 10px;
+    gap: 20px;
+    row-gap: 50px;
     max-width: 100%;
     justify-content: center;
     align-items: center;
@@ -1523,6 +1523,7 @@ i {
     gap: 60px;
     max-width: 100%;
     justify-content: center;
+    justify-items: center;
     align-items: center;
     padding-left: 15%;
     padding-right: 15%;
@@ -1532,6 +1533,7 @@ i {
     font-size: 18px;
 
   }
+  
 
   .services-grid.eng {
 
@@ -1601,13 +1603,16 @@ i {
 }
 @media (max-width: 490px) {
   .bottom-menu{
+    position: fixed;
+    bottom: 0;
+    z-index: 100;
     display: block;
     background-color: #e2c068;
     display: table;
     table-layout: fixed;
     left: 0;
     right: 0;
-    top: 60px;
+   
     width: 100%;
     height: 51px;
     vertical-align: middle;
@@ -1682,7 +1687,11 @@ opacity: 1 !important;
     line-height: 1;
     font-size: 20px;
 }
-.fa{
+.bottom-menu-button .fa{
   font-size: 24px;
+}
+.clients-item-content{
+  width: 90%;
+  min-height: 150px;
 }
 }
