--- a/views/partials/enFooter.ejs
+++ b/views/partials/enFooter.ejs
@@ -5,7 +5,7 @@
   <div class="footer-grid">
     <div class="footer-item">
       <div class="footer-item-title">
-        <a href="/itemGRT8100">Contact Details</a>
+        <a href="#">Contact Details</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
@@ -39,11 +39,11 @@
 
     <div class="footer-item" id="services-footer">
       <div class="footer-item-title">
-        <a href="/itemGRT8100">Services </a>
+        <a href="#">Services </a>
       </div>
       <div class="footer-item-content" >
         <ul id="menu" class="menu">
-          <li><a href="/contactUs">Cranes Rental</a></li>
+          <li><a href="#">Cranes Rental</a></li>
           <li><a href="#"> Cranes For Sale</a></li>
           <li><a href="#">Human Resources </a></li>
         </ul>
@@ -51,7 +51,7 @@
     </div>
     <div class="footer-item" id="ltd-footer">
       <div class="footer-item-title">
-        <a href="/itemGRT8100">S.R Cranes Ltd</a>
+        <a href="#">S.R Cranes Ltd</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a href="https://www.google.co.il" title="SRC | S.R Cranes Ltd.">
+      <a href="#" title="SRC | S.R Cranes Ltd.">
         <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
       /></a>
     </div>
