--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -5,7 +5,7 @@
   <div class="footer-grid">
     <div class="footer-item">
       <div class="footer-item-title">
-        <a href="/itemGRT8100">פרטי יצירת קשר </a>
+        <a >פרטי יצירת קשר </a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
@@ -45,12 +45,12 @@
 
     <div class="footer-item" id="services-footer">
       <div class="footer-item-title">
-        <a href="/itemGRT8100">שירותי החברה</a>
+        <a >שירותי החברה</a>
       </div>
       <div class="footer-item-content" id="services-footer">
         <!-- <div class="menu-container"> -->
         <ul id="menu" class="menu">
-          <li><a href="/contactUs">השכרת מנופים </a></li>
+          <li><a href="/#">השכרת מנופים </a></li>
           <li><a href="#">מכירת מנופים</a></li>
           <li><a href="#">כח אדם</a></li>
         </ul>
@@ -58,7 +58,7 @@
     </div>
     <div class="footer-item" >
       <div class="footer-item-title">
-        <a href="/itemGRT8100"> קצת עלינו</a>
+        <a href="#"> קצת עלינו</a>
       </div>
       <div class="footer-item-content">
         <ul id="menu" class="menu">
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="footer-item" id="footer-logo">
-      <a  href="https://www.google.co.il" title="SRC | ש.ר מנופים ">
+      <a  href="#" title="SRC | ש.ר מנופים ">
         <img class="logo-main scale" src="/assets/sr-logo.png" alt="logo"
       /></a>
     </div>
